# xf86-input-cmt

./: Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  apply_patches.sh  autogen.sh  config.h  config.status  configure  configure.ac  libtool  xorg-cmt.pc  xorg-cmt.pc.in
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
conf/: 60-cmt.conf
debian/: README.debian  README.source  changelog  control  copyright  rules  xf86-input-cmt.install  xserver-xorg-input-cmt.dirs  xserver-xorg-input-cmt.install  xserver-xorg-input-cmt.postinst  xserver-xorg-input-cmt.postrm
include/: Makefile  Makefile.am  Makefile.in  cmt-properties.h
man/: Makefile  Makefile.am  Makefile.in  cmt.man
patches/: dpi.patch  evdev.patch  linux_scroll.patch  log.patch
src/: Makefile  Makefile.am  Makefile.in  Makefile.test  cmt.c  cmt.h  cmt.lo  cmt_drv.la  event_test.cc  gesture.c  gesture.h  gesture.lo  properties.c  properties.h  test_stubs.c
src/.deps/: cmt.Plo  gesture.Plo  properties.Plo
src/.libs/: cmt_drv.la  cmt_drv.lai
xorg-conf/: 20-mouse.conf  20-touchscreen.conf  40-touchpad-cmt.conf  50-touchpad-cmt-aebl.conf  50-touchpad-cmt-alex.conf  50-touchpad-cmt-banjo.conf  50-touchpad-cmt-butterfly.conf  50-touchpad-cmt-candy.conf  50-touchpad-cmt-celes.conf  50-touchpad-cmt-clapper.conf  50-touchpad-cmt-cyan.conf  50-touchpad-cmt-daisy.conf  50-touchpad-cmt-elan.conf  50-touchpad-cmt-enguarde.conf  50-touchpad-cmt-expresso.conf  50-touchpad-cmt-falco.conf  50-touchpad-cmt-gandof.conf  50-touchpad-cmt-glimmer.conf  50-touchpad-cmt-gnawty.conf  50-touchpad-cmt-heli.conf  50-touchpad-cmt-kaen.conf  50-touchpad-cmt-kip.conf  50-touchpad-cmt-leon.conf  50-touchpad-cmt-link.conf  50-touchpad-cmt-lulu.conf  50-touchpad-cmt-lumpy.conf  50-touchpad-cmt-mario.conf  50-touchpad-cmt-orco.conf  50-touchpad-cmt-parrot.conf  50-touchpad-cmt-peppy.conf  50-touchpad-cmt-pi.conf  50-touchpad-cmt-pit.conf  50-touchpad-cmt-puppy.conf  50-touchpad-cmt-quawks.conf  50-touchpad-cmt-rambi.conf  50-touchpad-cmt-samus.conf  50-touchpad-cmt-spring.conf  50-touchpad-cmt-squawks.conf  50-touchpad-cmt-stout.conf  50-touchpad-cmt-swanky.conf  (+17 more)
